# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CMakeLists.txt  CMakePresets.json  toolchain-linux.cmake  toolchain-windows.cmake  toolchain.cmake
include/: window.hpp
lib/: CMakeLists.txt
lib/ChessEngine/: CMakeLists.txt
lib/ChessEngine/include/ChessEngine/: ChessEngine.hpp
lib/ChessEngine/src/: ChessEngine.cpp
lib/ChessLib/: CMakeLists.txt
lib/ChessLib/include/: ChessLib.hpp
lib/ChessLib/include/ChessLib/: ChessLib.hpp
lib/ChessLib/src/: ChessLib.cpp
lib/chessEngine/: CMakeLists.txt
lib/chessEngine/include/chessEngine/: chessEngine.hpp
lib/chessEngine/src/: chessEngine.cpp
lib/chessLib/: CMakeLists.txt
lib/chessLib/include/chessLib/: chessLib.hpp
lib/chessLib/src/: chessLib.cpp
src/: CMakeLists.txt  main.cpp  window.cpp
